--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,15 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script data-ad-client="ca-pub-9181047239226016" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167106940-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-167106940-1');
+    </script>
+
   </body>
 </html>
