--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>会話のきっかけにもう悩まない！雑談ネタを提供する「HANASHIKA」</title>
+    <meta content="飲み会や仕事など会話のきっかけになる雑談ネタをランダムで表示します。" name="description">
+    <meta property="og:title" content="会話のきっかけにもう悩まない！雑談ネタを提供する「HANASHIKA」" />
+    <meta property="og:url" content="https://zatsudan.me/" />
+    <meta property="og:site_name" content="HANASHIKA" />
+    <meta property="og:description" content="飲み会や仕事など会話のきっかけになる雑談ネタをランダムで表示します。" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
   <body>
